# attendance_registry

./: .gitignore  README.md  project.toml  pyproject.toml  requirements.txt
src/: __init__.py  _main.py  _types.py
src/attendance_registry/: _constants.py  _core.py  _env.py  _execution_context.py  _interface.py  _main.py  _mapping.py  _resources.py  _settings.py  _types.py
src/attendance_registry/_modules/: __init__.py  _api.py  _params.py  _processing.py
src/attendance_registry/_typing/: __init__.py  _alias.py  _dicts.py  _functions.py  _generics.py
