[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance_registry"
version = "0.6.0a1"
authors = [
    {name = "Pável Hernández Reza", email = "onnymm@outlook.com" }]
description = "Pequeña librería diseñada para obtener registros de asistencia desde dispositivos HikVision de forma remota a través de su API."
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "dotenvironment==1.1.1",
    "pandas~=2.3.3",
    "requests",
    "pydantic",
]

[tool.setuptools]
package-dir = { "" = "src" }
